Actualizar UserController, UserService y UserResponseDTO para usar DTO en consulta de usuario por ID